--- a/TuneHub/src/app/Components/Teachers/teacher-card/teacher-card.component.html
+++ b/TuneHub/src/app/Components/Teachers/teacher-card/teacher-card.component.html
@@ -1,4 +1,4 @@
-<div class="profile-container">
+<!-- <div class="profile-container">
 
   <section class="profile-card">
 
@@ -174,4 +174,4 @@
 
 </div>
 
-</div>
+</div> -->
