--- a/TuneHub/src/app/Components/Teachers/teacher-list/teacher-list.component.html
+++ b/TuneHub/src/app/Components/Teachers/teacher-list/teacher-list.component.html
@@ -39,7 +39,7 @@
     <section class="additional-filters">
         
         <div class="filter-group">
-            <label>מדינה</label>
+            <label>Country</label>
             <select class="dropdown" 
                     [(ngModel)]="selectedCountry" 
                     (change)="applyTeacherFilters()">
@@ -50,7 +50,7 @@
         </div>
 
         <div class="filter-group">
-            <label>עיר</label>
+            <label>city</label>
             <select class="dropdown" 
                     [(ngModel)]="selectedCity" 
                     (change)="applyTeacherFilters()">
@@ -61,7 +61,7 @@
         </div>
 
 <div class="filter-group">
-    <label>משך שיעור (דקות)</label>
+    <label>Lesson Duration (minutes)</label>
     <select class="dropdown" 
             [(ngModel)]="selectedLessonDuration" 
             (change)="applyTeacherFilters()">
@@ -72,7 +72,7 @@
 </div>
 
 <div class="filter-group">
-    <label>ניסיון (שנים)</label>
+    <label>Experience (years)</label>
     <select class="dropdown" 
             [(ngModel)]="selectedExperience" 
             (change)="applyTeacherFilters()">
@@ -83,7 +83,7 @@
 </div>
 
 <div class="filter-group">
-    <label>כלי נגינה</label>
+    <label>Instruments</label>
     <select class="dropdown" 
             [(ngModel)]="selectedInstrumentId" 
             (change)="applyTeacherFilters()">
@@ -94,7 +94,7 @@
 </div>
 
 <div class="filter-group">
-    <label>מחיר לשיעור</label>
+    <label>Price Per Lesson</label>
     <select class="dropdown" 
             [(ngModel)]="selectedPrice" 
             (change)="applyTeacherFilters()">
@@ -105,7 +105,7 @@
 </div>
 
         <div class="filter-group">
-            <label>שנת כניסה</label>
+            <label>Year Joined</label>
             <select class="dropdown" 
                     [(ngModel)]="selectedCreatedYear" 
                     (change)="applyTeacherFilters()">
