--- a/TuneHub/src/app/Components/Shared/home-page/home-page.component.html
+++ b/TuneHub/src/app/Components/Shared/home-page/home-page.component.html
@@ -12,7 +12,7 @@
 
         <div id="live">
             <span id="live-dot">•</span>
-            Live • 45,280 Musicians Online
+            <!-- Live • {{activeUsersCount}} Musicians Online -->
         </div>
         <br>
         <div id="title">
