--- a/TuneHub/src/app/Components/Shared/header/header.component.html
+++ b/TuneHub/src/app/Components/Shared/header/header.component.html
@@ -5,26 +5,12 @@
     style="color: rgb(65, 126, 231);">menu</mat-icon>
   <div class="logo" (click)="goToHomePage()">
     <img class="logo-pic" src="./assets/images/LOGO.png" alt="Logo" />
-    <!-- <div id="logo-name">
-      <p id="app-name">TuneHub</p>
-      <div class="app-slogan">
-        <span class="play">Play.</span>
-        <span class="share">Share.</span>
-        <span class="grow">Grow.</span>
-      </div>
-    </div> -->
+    
 
   </div>
 
-  <!-- אייקונים בצד ימין -->
   <div class="right-icons">
-    <!--     
-    <span class="icon">🔔</span>
-    <span class="icon">⚙️</span>
-    <div class="profile" (click)="goToProfile()">
-      <img src="assets/images/user_icon.png" alt="User" />
-    </div> -->
-
+   
 
 
     <div class="search-container" onclick="document.getElementById('q').focus()">
@@ -43,26 +29,24 @@
 
 
   </div>
-  <!-- <mat-icon>notifications</mat-icon> -->
 
 
   @if (isLoggedIn$ | async) {
-    <div class="notification-wrapper" (click)="navigateToNotifications()">
+    <!-- <div class="notification-wrapper" (click)="navigateToNotifications()"> -->
 
-    <mat-icon>notifications_none</mat-icon>
+    <!-- <mat-icon>notifications_none</mat-icon> -->
 
-    <ng-container *ngIf="(unreadCount$ | async) as count">
+    <!-- <ng-container *ngIf="(unreadCount$ | async) as count">
         <div *ngIf="+count > 0" class="notification-badge">
             {{ count }}
         </div>
-    </ng-container>
+    </ng-container> -->
 
 
 
 
-</div>
+<!-- </div> -->
   <app-profile-mini-avatar></app-profile-mini-avatar>
-  <!-- אייקון התראות -->
        
   }
   @else {
@@ -73,13 +57,7 @@
 
 </header>
 
-<!-- Overlay -->
-<!-- <div ngIf="!isSidebarOpen" class="overlay"
-  (click)="closeSidebar()"></div> -->
-<!-- <app-global-search
-  *ngIf="showSearchBox"
-  [query]="searchQuery">
-</app-global-search> -->
+
 @if (isSearchOpen) {
 <app-global-search [query]="searchTerm"></app-global-search>
 }
