--- a/TuneHub/src/app/Components/Comments/add-comment/add-comment.component.html
+++ b/TuneHub/src/app/Components/Comments/add-comment/add-comment.component.html
@@ -9,7 +9,7 @@
   <form (ngSubmit)="submitComment()" class="comment-form">
 
     <div class="form-group">
-      <label for="comment-text">תוכן התגובה:</label>
+      <label for="comment-text">content</label>
       <textarea
         id="comment-text"
         rows="6"
