--- a/TuneHub/src/app/Components/Post/posts/posts.component.html
+++ b/TuneHub/src/app/Components/Post/posts/posts.component.html
@@ -47,8 +47,7 @@
 @if (hasMorePosts) {
     <div class="load-more-container">
         <button class="button load-more-btn" (click)="loadMore()">
-            טען עוד פוסטים
-            <mat-icon>expand_more</mat-icon>
+load more posts            <mat-icon>expand_more</mat-icon>
         </button>
     </div>
 }
