--- a/TuneHub/src/app/Components/SheetMusic/upload-sheet-music/upload-sheet-music.component.html
+++ b/TuneHub/src/app/Components/SheetMusic/upload-sheet-music/upload-sheet-music.component.html
@@ -1,141 +1,154 @@
 @if(uploadSheetMusicService.isOpen){
 
-  <div class="modal-backdrop" (click)="onCancel()">
-<br><br><br><br>
-    <form class="modal-container"
-          [formGroup]="uploadForm"
-          (click)="$event.stopPropagation()"
-          (submit)="onSubmit()">
+<div class="modal-backdrop" (click)="onCancel()">
+  <br><br><br><br>
+  <form class="modal-container" [formGroup]="uploadForm" (click)="$event.stopPropagation()" (submit)="onSubmit()">
 
-      <div class="modal-left">
+    <div class="modal-left">
 
-        <label>Upload PDF Score</label>
+      <label>Upload PDF Score</label>
 
-        <div class="drop-zone"
-             (click)="pdfInput.click()"
-             (drop)="onFileDrop($event)"
-             (dragover)="onFileDragOver($event)">
-             
-          <div class="drop-icon">📄</div>
-          <p>Drop PDF files here</p>
+      <div class="drop-zone" (click)="pdfInput.click()" (drop)="onFileDrop($event)" (dragover)="onFileDragOver($event)">
 
-          <input type="file"
-                 #pdfInput
-                 style="display:none"
-                 (change)="onFileSelected($event)"
-                 accept=".pdf" />
-        </div>
+        <div class="drop-icon">📄</div>
+        <p>Drop PDF files here</p>
 
-        <div class="upload-container">
-          <button type="button"
-                  class="upload-photo"
-                  (click)="imageInput.click()"
-                  [disabled]="!aiDataAnalyzed">
-
-            <img *ngIf="imageCoverUrl"
-                 [src]="imageCoverUrl"
-                 class="uploaded-image-preview" />
-
-            <span *ngIf="!imageCoverUrl">Upload Cover</span>
-          </button>
-
-          <input type="file"
-                 #imageInput
-                 (change)="onImageSelected($event)"
-                 style="display:none"
-                 accept="image/*" />
-
-          <p class="optional-text">(Optional)</p>
-        </div>
+        <input type="file" #pdfInput style="display:none" (change)="onFileSelected($event)" accept=".pdf" />
+        <p class="error" *ngIf="uploadForm.get('file')?.invalid && uploadForm.get('file')?.touched">
+          PDF file is required
+        </p>
 
       </div>
 
+      <div class="upload-container">
+        <button type="button" class="upload-photo" (click)="imageInput.click()" [disabled]="!aiDataAnalyzed">
 
-      <div class="modal-right">
-<br><br><br><br>
-        <button type="button"
-                class="button"
-                [disabled]="isLoading || aiDataAnalyzed || !selectedFile"
-                (click)="analyzePDF()">
-          <mat-icon>smart_toy</mat-icon>
-          Analyze with AI
+          <img *ngIf="imageCoverUrl" [src]="imageCoverUrl" class="uploaded-image-preview" />
+
+          <span *ngIf="!imageCoverUrl">Upload Cover</span>
         </button>
 
-        <!-- areas -->
-        <div class="input-row">
-          <div class="input-group">
-            <label>Title</label>
-            <input formControlName="title" />
-          </div>
+        <input type="file" #imageInput (change)="onImageSelected($event)" style="display:none" accept="image/*" />
 
-          <div class="input-group">
-            <label>Key/Scale</label>
-            <select formControlName="scale">
-              <option value="" disabled>Select key...</option>
-              <option *ngFor="let scale of scaleOptions" [value]="scale">{{ scale }}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="input-row">
-          <div class="input-group">
-            <label>Composer</label>
-            <input formControlName="composer" />
-          </div>
-
-          <div class="input-group">
-            <label>Lyricist</label>
-            <input formControlName="lyricist" />
-          </div>
-        </div>
-
-        <div class="input-row">
-          <div class="input-group">
-            <label>Categories</label>
-            <select formControlName="categories" multiple>
-              <option *ngFor="let cat of categories" [value]="cat.id">{{ cat.name }}</option>
-            </select>
-          </div>
-
-          <div class="input-group">
-            <label>Difficulty Level</label>
-            <select formControlName="level">
-              <option value="" disabled>Select level...</option>
-              <option *ngFor="let level of difficultyLevels" [value]="level">{{ level }}</option>
-            </select>
-          </div>
-        </div>
-
-        <div class="input-row full-width">
-          <div class="input-group full-width">
-            <label>Instruments</label>
-            <select formControlName="instruments" multiple>
-              <option *ngFor="let inst of instrumentsList" [value]="inst.id">
-                {{ inst.name }}
-              </option>
-            </select>
-          </div>
-        </div>
-
-        <div class="modal-footer">
-          <button type="button" class="cancel-btn" (click)="onCancel()">Cancel</button>
-          <button type="submit"
-                  class="button"
-                  [disabled]="!uploadForm.valid || !selectedFile || isLoading">
-            Save Sheet
-          </button>
-        </div>
-
+        <p class="optional-text">(Optional)</p>
       </div>
-    </form>
 
-  </div>
+    </div>
+
+
+    <div class="modal-right">
+      <br><br><br><br>
+      <button type="button" class="button" [disabled]="isLoading || aiDataAnalyzed || !selectedFile"
+        (click)="analyzePDF()">
+        <mat-icon>smart_toy</mat-icon>
+        Analyze with AI
+      </button>
+
+      <!-- areas -->
+      <div class="input-row">
+        <div class="input-group">
+          <label>Title</label>
+          <input formControlName="title" />
+
+          <p class="error" *ngIf="uploadForm.get('title')?.invalid && uploadForm.get('title')?.touched">
+            <span *ngIf="uploadForm.get('title')?.errors?.['required']">Title is required</span>
+            <span *ngIf="uploadForm.get('title')?.errors?.['minlength']">Minimum 3 characters</span>
+            <span *ngIf="uploadForm.get('title')?.errors?.['maxlength']">Maximum 255 characters</span>
+          </p>
+        </div>
+
+        <div class="input-group">
+          <label>Key/Scale</label>
+          <select formControlName="scale">
+            <option value="" disabled>Select key...</option>
+            <option *ngFor="let scale of scaleOptions" [value]="scale">{{ scale }}</option>
+          </select>
+
+          <p class="error" *ngIf="uploadForm.get('scale')?.invalid && uploadForm.get('scale')?.touched">
+            Scale is required
+          </p>
+
+        </div>
+      </div>
+
+      <div class="input-row">
+        <div class="input-group">
+          <label>Composer</label>
+          <input formControlName="composer" />
+
+          <p class="error" *ngIf="uploadForm.get('composer')?.invalid && uploadForm.get('composer')?.touched">
+            <span *ngIf="uploadForm.get('composer')?.errors?.['required']">Composer is required</span>
+            <span *ngIf="uploadForm.get('composer')?.errors?.['maxlength']">Max 255 characters</span>
+          </p>
+
+        </div>
+
+        <div class="input-group">
+          <label>Lyricist</label>
+          <input formControlName="lyricist" />
+
+          <p class="error" *ngIf="uploadForm.get('lyricist')?.invalid && uploadForm.get('lyricist')?.touched">
+            <span *ngIf="uploadForm.get('lyricist')?.errors?.['required']">
+              Lyricist is required
+            </span>
+            <span *ngIf="uploadForm.get('lyricist')?.errors?.['maxlength']">
+              Max 255 characters
+            </span>
+          </p>
+
+        </div>
+      </div>
+
+      <div class="input-row">
+        <div class="input-group">
+          <label>Categories</label>
+          <select formControlName="categories" multiple>
+            <option *ngFor="let cat of categories" [value]="cat.id">{{ cat.name }}</option>
+          </select>
+          <p class="error" *ngIf="uploadForm.get('categories')?.invalid && uploadForm.get('categories')?.touched">
+            At least one category is required
+          </p>
+        </div>
+
+        <div class="input-group">
+          <label>Difficulty Level</label>
+          <select formControlName="level">
+            <option value="" disabled>Select level...</option>
+            <option *ngFor="let level of difficultyLevels" [value]="level">{{ level }}</option>
+          </select>
+
+          <p class="error" *ngIf="uploadForm.get('level')?.invalid && uploadForm.get('level')?.touched">
+            Difficulty level is required
+          </p>
+
+        </div>
+      </div>
+
+      <div class="input-row full-width">
+        <div class="input-group full-width">
+          <label>Instruments</label>
+          <select formControlName="instruments" multiple>
+            <option *ngFor="let inst of instrumentsList" [value]="inst.id">
+              {{ inst.name }}
+            </option>
+          </select>
+          <p class="error" *ngIf="uploadForm.get('instruments')?.invalid && uploadForm.get('instruments')?.touched">
+            At least one instrument is required
+          </p>
+
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="cancel-btn" (click)="onCancel()">Cancel</button>
+        <button type="submit" class="button" [disabled]="!uploadForm.valid || !selectedFile || isLoading">
+          Save Sheet
+        </button>
+      </div>
+
+    </div>
+  </form>
+
+</div>
 
 }
-
-
-
-
-
-
-
